--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -1,4 +1,4 @@
-name: Lint and Test
+name: Lint
 
 on:
   pull_request:
@@ -31,21 +31,3 @@ jobs:
     - name: Security Test with bandit
       run: |
         bandit -ll -s B310 . -r
-
-  Test:
-
-    runs-on: ubuntu-16.04
-
-    steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.7
-    - name: Install dependencies
-      run: |
-        python -m pip install -r requirements.txt
-        python -m pip install pytest
-    - name: Test with Pytest
-      run: |
-        python -m pytest -v
