End of day commit.

--- a/example.conf
+++ b/example.conf
@@ -6,3 +6,6 @@ fsb = hybrid_analysis_api_key
 server = somehwere.example.com
 rcpts = someone@example.com
 sender = bot@example.com
+
+[block]
+path = path_to_file
