Added OTX API calls.

--- a/example.conf
+++ b/example.conf
@@ -1,6 +1,8 @@
 [API]
 vt = viurs_total_api_key
 fsb = hybrid_analysis_api_key
+aipdb = abuse_ip_db_api_key
+otx = alienvault_otx_api_key
 
 [mail]
 server = somehwere.example.com
